# Chimera

./: CMakeLists.txt  README.md  build.bat  main.cpp  version.h  version.rc
client/: client.cpp  client_signature.cpp  client_signature.h  controls.cpp  controls.h  hac2.cpp  keystone.cpp  keystone.h  open_sauce.cpp  path.cpp  path.h  settings.cpp  settings.h
client/command/: command.cpp  command.h  console.cpp  console.h
client/controller_fix/: magnetism_fix.h
client/debug/: budget.cpp  budget.h  devmode.cpp  eep.cpp  wireframe.cpp
client/enhancements/: anisotropic_filtering.cpp  auto_center.cpp  firing_particle.cpp  mouse.cpp  mouse_acceleration.cpp  mouse_acceleration.h  multitexture_overlay.cpp  safe_zone.cpp  show_spawn.cpp  show_spawn.h  skip_loading.cpp  throttle_fps.cpp  uncap_cinematic.cpp  zoom_blur.cpp
client/fix/: camo_fix.cpp  descope_fix.cpp  fov_fix.cpp  magnetism_fix.cpp  scope_fix.cpp  scope_fix.h  sniper_hud.cpp  widescreen_fix.cpp
client/hac2/: hac2.cpp  scope_fix.cpp  scope_fix.h
client/halo_data/: chat.cpp  chat.h  global.cpp  global.h  hud.h  keyboard.cpp  map.cpp  map.h  resolution.cpp  script.cpp  spawn_object.cpp  spawn_object.h  table.cpp  table.h  tag_data.h
client/hooks/: event.h  map_load.cpp  map_load.h  rcon_message.cpp  rcon_message.h  tick.cpp  tick.h
client/hud_mod/: offset_hud_elements.cpp  offset_hud_elements.h
client/interpolation/: camera.cpp  camera.h  fp.cpp  interpolation.cpp  light.cpp  particle.cpp  rotation.cpp  rotation.h  widget.cpp
client/lua/: lua.cpp  lua.h  lua2.cpp  lua_callback.cpp  lua_game.cpp  lua_io.cpp  lua_script.h
client/messaging/: messaging.cpp  messaging.h
client/startup/: crc32.c  fast_startup.cpp  fast_startup.h
client/test/: input.cpp  input.h
client/update_notifier/: Cargo.toml  update_notifier.cpp  update_notifier.h
client/update_notifier/src/: lib.rs
client/visuals/: anisotropic_filtering.cpp  force_resolution.cpp  force_resolution.h  gametype_indicator.cpp  gametype_indicator.h  server_ip.cpp  set_resolution.cpp  set_resolution.h  vertical_field_of_view.cpp
client/xbox/: safe_zone.cpp  simple_score_screen.cpp  split_screen_hud.cpp
cmake/: FindDirectX.cmake  FindHaloCE.cmake
code_injection/: codefinder.cpp  codefinder.h  signature.cpp  signature.h
code_injection/hacclient/: codefinder.cpp
math/: data_types.cpp  data_types.h
